# RAGret

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
docs/superpowers/: phase2-pre-checklist.md
frontend/src/: main.js  style.css
ragret/: cache.py  chunk_parent.py  citation_urls.py  cli.py  corpus_build.py  embedder.py  fts_index.py  image_convert.py  indexer.py  loader.py  media_assets.py  models.py  parent_store.py  quick_qa_agent.py  rerank.py  searcher.py  vision_caption.py  vision_config.py
server/: __init__.py  auth_actor.py  build_queue.py  config.py  deps.py  exception_handlers.py  kb_content_paths.py  main.py  media_util.py  runtime_paths.py  schemas.py  serializers.py  session_cookie.py  skill_pack.py  static_ui.py  webhook_urls.py
skill/: SKILL.md  SKILL.zh.md
tests/: conftest.py  test_auth_api.py  test_auth_service.py  test_build_queue.py  test_chunk_parent.py  test_citation_urls.py  test_corpus_build.py  test_corpus_fingerprint.py  test_deps.py  test_embedder.py  test_exception_handlers.py  test_fts_index.py  test_image_convert.py  test_indexer.py  test_kb_api.py  test_kb_rename_paths.py  test_loader.py  test_media_assets.py  test_parent_api.py  test_preprocess.py  test_preprocess_embedded_images.py  test_push_api.py  test_runtime_paths.py  test_search_api.py  test_search_citation.py  test_searcher.py  test_settings_image_vision.py  test_settings_llm.py  test_skill_pack.py  test_store_pool_smoke.py  test_upload_api.py  test_user_api.py  test_vision_caption.py  test_vision_config.py  test_webhook.py
(+36 files in other folders)
